# bitbot-unitree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc  main.cpp  readme.md  types.hpp  user_func.cpp  user_func.h  user_func.hpp
Bitbot_Unitree/: CMakeLists.txt
Bitbot_Unitree/include/bus/: gz_bus.h  motor_crc_hg.h  unitree_bus.h
Bitbot_Unitree/include/device/: gz_device.hpp  gz_gamepad.h  gz_imu.h  gz_joint.h  unitree_battery.h  unitree_device.hpp  unitree_gamepad.h  unitree_gamepadheader.h  unitree_imu.h  unitree_joint.h  unitree_robot.h
Bitbot_Unitree/include/kernel/: JsonParser.hpp  gz_kernel.hpp  unitree_kernel.hpp
Bitbot_Unitree/src/bus/: gz_bus.cc  motor_crc_hg.cpp  unitree_bus.cpp
Bitbot_Unitree/src/device/: gz_battery.cc  gz_gamepad.cc  gz_imu.cc  gz_joint.cc  gz_robot.cc  unitree_battery.cpp  unitree_gamepad.cpp  unitree_imu.cpp  unitree_joint.cpp  unitree_robot.cpp
CheckPoints/: G1_Take_102.bvh_60hz.csv  G1_gangnam_style_V01.bvh_60hz.csv  policy_1.onnx
config/: backend.json  hhfc_gz.xml  hhfc_gz_controllers.yaml  robot.yaml
include/bitbot_gz/bus/: gz_bus.h
include/bitbot_gz/device/: gz_device.hpp  gz_imu.h  gz_joint.h
include/bitbot_gz/kernel/: gz_kernel.hpp  ros_interface.hpp
launch/: hhfc_gz.launch.py
models/: g1_29dof.xml  scene_29dof.xml
rviz/: hhfc.rviz
scripts/: terrain_generator.py
settings/: CtrlConfig.json  bitbot_mujoco.xml  bitbot_unitree.xml  setting.json
src/bus/: gz_bus.cc
src/device/: gz_imu.cc  gz_joint.cc
src/plugin/: pose_publisher.cc  robot_reset_plugin.cc
urdf/hhfc/urdf/: hhfc.urdf
world/: empty.sdf  gui.config  terrain.sdf
